<resources>
    <string name="app_name">FriendlyFire</string>
    <string name="friendly_fire">Friendly Fire!</string>
    <string name="where_your_friends_become_your_enemies_for_the_night">Where your friends become your enemies for the night…</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="tutorial">Tutorial</string>
    <string name="makeGroup">Make A Group</string>
    <string name="joinGroup">Join A Group</string>
    <string name="joinCode">Join Code:</string>
    <string name="startBet">Start Game</string>
    <string name="mainLogo">Friendly Fire Logo</string>
    <string name="splashLogo">Friendly Fire Splash Logo</string>
    <string name="backToMenu">Back to Menu</string>
    <string name="enterJoinCode">Enter Join Code</string>
    <string name="join">Join</string>
    <string name="profileDescription">Profile Picture Symbol</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_instr">Enter your email associated with your account and we will send you an email to reset your password.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="EmailHint">Email Address</string>
    <string name="SubmitLiteral">Submit</string>
    <string name="LogoutLiteral">Log Out</string>
    <string name="DeleteAccount">Delete My Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lets_begin">Lets Begin</string>
    <string name="you_are_a_better">You Are a Bettor!</string>
    <string name="the_betting_line_description_is">The betting line description is:</string>
    <string name="description">description…</string>
    <string name="the_betting_line_number_is">The betting line number is:</string>
    <string name="lower">Lower</string>
    <string name="betting_line_number">Betting Line Number</string>
    <string name="number">number…</string>
    <string name="place_your_bet_and_choose_higher_or_lower_than_the_betting_line">Place your bet and choose higher or lower than the betting line:</string>
    <string name="wait_for_the_bookie_to_make_a_betting_line">Wait for the bookie to make a betting line.</string>
    <string name="lowerSideWin">The lower side!</string>
    <string name="higherSideWin">The higher side!</string>
    <string name="losingAmount">You\'ve lost $%d</string>
    <string name="winningAmount">You\'ve won $%d</string>
    <string name="BettorUI">Bettor</string>
    <string name="BettorHint">Your Bet</string>
    <string name="BettorLowerUI">Lower</string>
    <string name="BettorHigherUI">Higher</string>
    <string name="WifiDescription">Wifi symbol</string>
    <string name="NetworkError">Network Error</string>
    <string name="CheckConnection">Please Check Your Internet Connection</string>
    <string name="ResultsLiteral">Results</string>
    <string name="ResultsSideWon">The round has ended! The side that won was:</string>
    <string name="OverUnder">over/under</string>
    <string name="BookieLiteral">Bookie</string>
    <string name="BookieTakeNote">Take note of the number of actions the subject does for this round. Hit end when the counting has finished.</string>
    <string name="BookieZero">0</string>
    <string name="BookieMinus">-</string>
    <string name="BookiePlus">+</string>
    <string name="BookieReset">Reset</string>
    <string name="BookieEnd">End</string>
    <string name="JoinCodeTest">Test</string>
    <string name="YouLost">Your side lost! Looks like you need to improve your betting game…</string>
    <string name="YouWon">Your side won! Look at you go, you\'re a professional!</string>
    <string name="TotalLosses">Total Losses:</string>
    <string name="TotalWinnings">Total Winnings:</string>
    <string name="BetterLuckNextTime">All losing bets went to the winner\'s side. Better luck next round!</string>
    <string name="ProfileLiteral">Profile</string>
    <string name="UpdateProfile">UPDATE PROFILE</string>
    <string name="MainMenu">MAIN MENU</string>
    <string name="ChoosePhoto">Choose Photo</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="RegisterButton">REGISTER</string>
    <string name="LoginButton">LOGIN</string>
    <string name="SubjectRole">You Are The Subject!</string>
    <string name="SubjectNoPressure">No Pressure, you\'re the person everyone is betting on. Your actions will determine who wins and loses their money. However, you will not be told what action counts towards the bets.</string>
    <string name="SubjectActNatural">You will be told what people were betting on after the round ends. Act natural…</string>
    <string name="SubjectLiteral">Subject</string>
    <string name="SubjectRoundEnd">The round has ended! The description the betters were betting on was:</string>
    <string name="SubjectDescription">description…</string>
    <string name="WinnerSplitBets">You get to keep your bet and split the losing side\'s bets.</string>
    <string name="EyeCompetition">Make sure to eye up and down your competition…</string>
    <string name="HourglassDescription">Hourglass Image</string>
    <string name="BookieRole">You Are The Bookie!</string>
    <string name="BookieDescription">Enter the betting line description and number for the subject. The betters will choose above or below this amount. Keep this number a secret from the subject.</string>
    <string name="BookieDescriptionHint">Betting Line Description</string>
    <string name="BookieBetHint">Betting Line Number</string>
    <string name="GettingInteresting">Things are about to get interesting…</string>
</resources>