<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UI.MainMenuActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainMenuLayout" >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/mainLogo" />

        <ImageView
            android:id="@+id/profileButton"
            android:layout_width="63dp"
            android:layout_height="64dp"
            android:layout_below="@id/logo"
            android:layout_marginTop="-100dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/black"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:src="@drawable/baseline_person_outline_24"
            app:drawableTint="@color/GhostWhite"
            android:contentDescription="@string/profileDescription" />

        <Button
            android:id="@+id/makeGroupButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/FireOrange"
            android:gravity="center"
            android:text="@string/makeGroup"
            android:textColor="@color/GhostWhite"
            />

        <Button
            android:id="@+id/joinGroupButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/FireYellow"
            android:gravity="center"
            android:text="@string/joinGroup"
            android:textColor="@color/GhostWhite"
            />

        <Button
            android:id="@+id/LogOut"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="375dp"
            android:backgroundTint="@color/Salmon"
            android:gravity="center"
            android:text="@string/LogoutLiteral"
            android:textColor="@color/GhostWhite" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LogOut"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:text="@string/DeleteAccount"
            android:textColor="@color/GhostWhite" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noWifiLayout"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noWifi"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:focusable="true"
            tools:src="@drawable/wifisymbol"
            android:contentDescription="@string/WifiDescription" />

        <TextView
            android:id="@+id/networkError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/noWifi"
            android:text="@string/NetworkError"
            android:textColor="@color/GhostWhite"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pleaseCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/networkError"
            android:text="@string/CheckConnection"
            android:textColor="@color/GhostWhite"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>




</RelativeLayout >