<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UI.SubjectResultActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subjectResultsLayout" >

        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/SubjectLiteral"
            android:textAlignment="center"
            android:textColor="@color/Orange"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/roundHasEnded"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_below="@id/subject"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/SubjectRoundEnd"
            android:textColor="@color/Orange"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_below="@id/roundHasEnded"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/SubjectDescription"
            android:textColor="@color/FireOrange"
            android:textSize="25sp" />

        <Button
            android:id="@+id/backToMenuButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/Salmon"
            android:text="@string/backToMenu"
            android:textColor="@color/GhostWhite"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noWifiLayout"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noWifi"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:focusable="true"
            tools:src="@drawable/wifisymbol"
            android:contentDescription="@string/WifiDescription" />

        <TextView
            android:id="@+id/networkError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/noWifi"
            android:text="@string/NetworkError"
            android:textColor="@color/GhostWhite"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pleaseCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/networkError"
            android:text="@string/CheckConnection"
            android:textColor="@color/GhostWhite"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>



</RelativeLayout>